# swift-protobuf-xcode-failure

./: .bazelrc  .gitignore  LICENSE  README.md  WORKSPACE  swift-proto.sublime-project
src/proto/: BUILD.bazel  example.proto
src/swift/: BUILD.bazel  main.swift
